tests/src/frontend/syntax/invalid/lvalue_in_unary.sk
fun main(): String {
  !x.!y
}
